packages/compiler-rs/tests/snapshots/v_slots__should_raise_error_if_has_children.snap
---
source: tests/v_slots.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
import { template as _template } from "vue";
const t0 = _template(" ");
(() => {
  const n1 = _createComponent(Comp, null, { default: () => {
    const n0 = t0();
    return n0;
  } }, true);
  return n1;
})();
