packages/compiler-rs/tests/snapshots/v_slots__should_raise_error_if_has_no_expression.snap
---
source: tests/v_slots.rs
expression: code
---
import { createComponent as _createComponent } from "vue-jsx-vapor";
(() => {
  const n0 = _createComponent(Comp, null, null, true);
  return n0;
})();
