packages/compiler-rs/tests/snapshots/v_slots__should_raise_error_if_not_component.snap
---
source: tests/v_slots.rs
expression: code
---
import { template as _template } from "vue";
const t0 = _template("<div></div>", true);
(() => {
  const n0 = t0();
  return n0;
})();
